@@ -5,5 +5,3 @@
 
 - Decide on ``unhook_zca`` argument to ``tearDown``.
 
-- Hook the ZCA in ``Configurator.begin``.
-
